Updated my profile

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 <h1>AdrianQ</h1>
+
+<h3>Profile</h3>
+<ul>
+<li>Started: 08/02/1999</li>
+<li>Role: Student</li>
+<li>Hobbies: Gaming, Reading, Flight Sim</li>
+</ul>
